// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List should render correctly more todos right sorted 1`] = `
<div
  className="container"
>
  <h1>
    Todo List
  </h1>
  <ul
    styleName="list"
  >
    <li
      key="2"
      styleName="list-element"
    >
      <Todo
        isLoading={false}
        removeTodo={[Function]}
        saveTodo={[Function]}
        today="2018-09-18"
        todo={
          Object {
            "id": 2,
            "lastEvent": "2018-05-11",
            "name": "Superfit",
            "schedule": 3,
          }
        }
      />
    </li>
    <li
      key="3"
      styleName="list-element"
    >
      <Todo
        isLoading={false}
        removeTodo={[Function]}
        saveTodo={[Function]}
        today="2018-09-18"
        todo={
          Object {
            "id": 3,
            "lastEvent": "2018-05-12",
            "name": "Mama anrufen",
            "schedule": 7,
          }
        }
      />
    </li>
    <li
      key="1"
      styleName="list-element"
    >
      <Todo
        isLoading={false}
        removeTodo={[Function]}
        saveTodo={[Function]}
        today="2018-09-18"
        todo={
          Object {
            "id": 1,
            "lastEvent": "2018-06-03",
            "name": "Papa anrufen",
            "schedule": 4,
          }
        }
      />
    </li>
  </ul>
  <button
    disabled={false}
    onClick={[Function]}
    styleName="add-todo-btn"
    title="Add Todo"
    type="button"
  >
    +
  </button>
</div>
`;

exports[`List should render correctly one todo 1`] = `
<div
  className="container"
>
  <h1>
    Todo List
  </h1>
  <ul
    styleName="list"
  >
    <li
      key="1"
      styleName="list-element"
    >
      <Todo
        isLoading={false}
        removeTodo={[Function]}
        saveTodo={[Function]}
        today="2018-09-18"
        todo={
          Object {
            "id": 1,
            "lastEvent": "2018-06-03",
            "name": "Papa anrufen",
            "schedule": 4,
          }
        }
      />
    </li>
  </ul>
  <button
    disabled={false}
    onClick={[Function]}
    styleName="add-todo-btn"
    title="Add Todo"
    type="button"
  >
    +
  </button>
</div>
`;
